--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6a51a9a
-	base = efc0333
-	trim = 
-	trimbase = 
+	base = bec2913
+	trim = color_util
+	trimbase = efc0333
