--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/foxy/color_util
-	previous = 
-	base = bec2913
+	previous = bec2913
+	base = 3054a84
 	trim = 
 	trimbase = 
