--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/foxy/color_util
-	previous = 
-	base = c52ad36
+	previous = c52ad36
+	base = 602b625
 	trim = 
 	trimbase = 
