--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6a51a9a
-	base = 5bf84c9
-	trim = 
-	trimbase = 
+	base = 163eed6
+	trim = color_util
+	trimbase = 5bf84c9
