--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/color_util
-	previous = 
-	base = 163eed6
+	previous = 163eed6
+	base = 13d0984
 	trim = 
 	trimbase = 
