--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/color_util
-	previous = 
-	base = fac0929
+	previous = fac0929
+	base = a900af4
 	trim = 
 	trimbase = 
