--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/color_util
-	previous = 
-	base = 2f04ecb
+	previous = 2f04ecb
+	base = 858c481
 	trim = 
 	trimbase = 
