--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/humble/color_util
-	previous = 
-	base = 5a7655d
+	previous = 5a7655d
+	base = fdac15d
 	trim = 
 	trimbase = 
