--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6a51a9a
-	base = 493332a
-	trim = 
-	trimbase = 
+	base = ee3a3ad
+	trim = color_util
+	trimbase = 493332a
