--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/color_util
-	previous = 
-	base = ee3a3ad
+	previous = ee3a3ad
+	base = bb353f6
 	trim = 
 	trimbase = 
