--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/color_util
-	previous = 
-	base = 4364dee
+	previous = 4364dee
+	base = a5271a4
 	trim = 
 	trimbase = 
