--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/color_util
-	previous = 
-	base = 325668a
+	previous = 325668a
+	base = d9eda75
 	trim = 
 	trimbase = 
