--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/color_util
-	previous = 
-	base = 24dad60
+	previous = 24dad60
+	base = 5d9247f
 	trim = 
 	trimbase = 
