--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6a51a9a
-	base = 3087151
+	base = 07a7d9c
 	trim = color_util
-	trimbase = 
+	trimbase = 3087151
