--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/color_util
-	previous = 
-	base = f6e9983
+	previous = f6e9983
+	base = 0e801af
 	trim = 
 	trimbase = 
