--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ed59e62
-	base = 9589c51
+	base = e95230b
 	trim = color_util
-	trimbase = 
+	trimbase = 9589c51
