--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.0.0-2": ["Wed Mar 29 2023", "David V. Lu!!", "davidvlu@gmail.com"]}
+{"1.0.0-3": ["Thu Apr 20 2023", "David V. Lu!!", "davidvlu@gmail.com"], "1.0.0-2": ["Wed Mar 29 2023", "David V. Lu!!", "davidvlu@gmail.com"]}
