--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 439b294
-	base = a90fb8b
-	trim = 
-	trimbase = 
+	base = c019b9f
+	trim = color_util
+	trimbase = a90fb8b
