--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/color_util
-	previous = 
-	base = c019b9f
+	previous = c019b9f
+	base = 7768585
 	trim = 
 	trimbase = 
