--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/color_util
-	previous = 
-	base = f7ebdde
+	previous = f7ebdde
+	base = b37d43a
 	trim = 
 	trimbase = 
