--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/color_util
-	previous = 
-	base = e82b736
+	previous = e82b736
+	base = 6a0fde1
 	trim = 
 	trimbase = 
