--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/color_util
-	previous = 
-	base = 435c624
+	previous = 435c624
+	base = 12c7d04
 	trim = 
 	trimbase = 
