--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = cfe8a93
-	base = f043e49
+	base = 231c6ee
 	trim = color_util
-	trimbase = 
+	trimbase = f043e49
