--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = cfe8a933d96c
-	base = 23930d14f682
+	base = c851c4d07549
 	trim = color_util
-	trimbase = 
+	trimbase = 23930d14f682
