--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,14 +12,17 @@ repos:
   - id: check-symlinks
   - id: check-case-conflict
   - id: check-xml
-  rev: v4.4.0
+  - id: check-yaml
+  rev: v5.0.0
 - repo: https://github.com/codespell-project/codespell
   hooks:
   - id: codespell
     args:
     - --write-changes
-  rev: v2.2.2
+  rev: v2.4.1
 - repo: https://github.com/pre-commit/mirrors-clang-format
   hooks:
   - id: clang-format
-  rev: v13.0.1
+  rev: v20.1.0
+ci:
+  autoupdate_schedule: quarterly
