--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 1610ed4
-	base = d1023ea
+	base = f150258
 	trim = color_util
-	trimbase = 
+	trimbase = d1023ea
