--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.0.0-3": ["Tue Mar 05 2024", "David V. Lu!!", "davidvlu@gmail.com"]}
+{"1.1.0-1": ["Tue Jun 03 2025", "David V. Lu!!", "davidvlu@gmail.com"], "1.0.0-3": ["Tue Mar 05 2024", "David V. Lu!!", "davidvlu@gmail.com"]}
